# transations-pix

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: main.yml
docs/: extract.md  index.md  load.md  transform.md
docs/stylesheets/: extra.css
extract/: index.html
load/: index.html
search/: search_index.json
src/: main.py
src/etl/: __init__.py  extract.py  load.py  pipeline.py  transform.py  trasnform.py
src/pipeline/: extract.py
tests/: __init__.py  test_pipeline.py
transform/: index.html
