[tool.poetry]
name = "transactions-pix"
version = "0.1.0"
description = ""
authors = ["lucas.felicio"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.2"
requests = "^2.31.0"
pytest = "^7.4.3"
pydocstyle = "^6.3.0"
pip-audit = "^2.6.1"
taskipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "python src/main.py"
format = "isort . && blue ."
test = "pytest -v"