[tool.poetry]
name = "transactions-pix"
version = "0.1.0"
description = ""
authors = ["lucas.felicio"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.2"
requests = "^2.31.0"
pytest = "^7.4.3"
pydocstyle = "^6.3.0"
pip-audit = "^2.6.1"
taskipy = "^1.12.0"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.3"
pygments = "^2.16.1"
mkdocs-material = "^9.4.8"
pymdown-extensions = "^10.3.1"
pre-commit = "^3.5.0"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "python src/main.py"
test = "pytest -v"
doc = "mkdocs serve"
format = "isort . && black ."
